--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.3"
+    "vue-router": "^3.0.3",
+    "white-web-sdk": "^2.2.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.10.0",
